fix: responsive on mobile version

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,6 +26,10 @@ body {
     max-width: 100vw;
 }
 
+.username {
+    font-weight: 600 !important;
+}
+
 input.form-control:focus,
 select.form-control:focus {
     outline: none;
@@ -356,6 +360,12 @@ select.form-control:focus {
 .nav-item:hover {
     background-color: var(--muted-color);
     border-radius: 0.5rem;
+    color: var(--primary-color) !important;
+}
+
+.nav-button {
+    border: 1px solid #64748b;
+    padding: 4px;
 }
 
 .nav-item.active {
@@ -455,4 +465,52 @@ select.form-control:focus {
 
 .dt-column-order {
     display: none;
+}
+
+.nav-item .nav-link {
+    cursor: pointer !important;
+}
+
+@media only screen and (max-width: 768px) {
+    .fixed-sidebar {
+        display: none;
+    }
+    .nav-header {
+        justify-content: space-between !important;
+    }
+    .nav-mobile {
+        display: inline !important;
+    }
+    .fc-header-toolbar {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 12px;
+    }
+    .card-dashboard-container {
+        gap: 24px;
+    }
+    .username {
+        display: none !important;
+    }
+    #calendar {
+        font-size: var(--font-size-base) !important;
+    }
+    .fc-toolbar-title {
+        font-size: 18px !important;
+    }
+    .banner-auth-container {
+        display: none !important;
+    }
+    .auth-container {
+        width: 100% !important;
+    }
+    .auth {
+        display: flex !important;
+        justify-content: center !important;
+        align-items: center !important;
+        height: 100% !important;
+        padding: 0px 12px !important;
+        width: 100% !important;
+        margin: 0px !important;
+    }
 }
